@@ -4,6 +4,11 @@
 Note: This file contains a list changes in the 'master' branch.
 
 
+2020-06-26
+
+  - Merged #480 - parser: Read input data from Python file objects by dnicolodi.
+
+
 2020-06-10
 
   - Released 2.3.0. See #459.
